<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Tutorial HungEco</string>
    <string name="number_2">Number 2</string>
    <string name="number_1">Number 1</string>
    <string name="calculate">Calculate</string>
    <string name="hello_string">Xin Chào!</string>
    <string name="login_string">Demo giao diện</string>
    <string name="username_hint">Tên đăng nhập (vd: hungne)</string>
    <string name="password_hint">Mật khẩu (vd: 123456)</string>
    <string name="button_login_string">Đăng Nhập</string>
    <string name="btn_back">Quay lại</string>
    <string name="splash_string">Đang mở...</string>
    <string name="out_message_string">Thông báo trả về</string>
    <string name="select_picture_string">Chọn ảnh đại diện</string>
    <string name="name_string">Họ tên: [Chưa cập nhật]</string>
    <string name="date_string">Ngày sinh: [Chưa cập nhật]</string>
    <string name="check_launch_mode">Check Launch Mode</string>
    <string name="send_data_string">MÀN HÌNH GỬI DỮ LIỆU</string>
    <string name="receive_data_string">GỬI DỮ LIỆU SANG MÀN HÌNH NHẬN</string>
    <string name="data_receive_string">MÀN HÌNH NHẬN DỮ LIỆU</string>
    <string name="show_data_string">Nội dung nhận được sẽ hiển thị ở đây...&#10;&#10;</string>
    <string name="back_to_send_data_screen_string">QUAY LẠI MÀN HÌNH GỬI</string>
    <string name="map_live_string">Map Live</string>
    <string name="string_live">LIVE</string>
    <string name="street_map">STREET MAP</string>
    <string name="camera_360">CAMERA 360</string>
    <string name="earth_3d">EARTH 3D</string>
    <string name="demo_layout_string">Demo Layout</string>
    <string name="application_string">APPLICATION</string>
    <string name="gps_camera_string">GPS CAMERA</string>
    <string name="traffic_map_string">TRAFFIC MAP</string>
    <string name="tools_string">TOOLS</string>
    <string name="famous_place_string">FAMOUS PLACE</string>
    <string name="compass_string">COMPASS</string>
    <string name="welcome_to_string">welcome to</string>
    <string name="earth_map">EARTH MAP</string>
    <string name="setting_and_ìnor">Cài Đặt và Thông Tin</string>
    <string name="information_person">1. Thông tin Người dùng</string>
    <string name="name_user">Tên Người Dùng</string>
    <string name="fix">Sửa</string>
    <string name="common_setting">2. Cài đặt Chung</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="language">Ngôn ngữ:</string>
    <string name="avatar">Avatar</string>
    <string name="topic">Chủ đề:</string>
    <string name="night_size">Chế độ Tối</string>
    <string name="function">3. Chức năng Khác</string>
    <string name="security">Bảo mật</string>
    <string name="help">Trợ giúp</string>
    <string name="evaluate">Đánh giá</string>
    <string name="version">Phiên bản</string>
    <string name="mail">hungeco@gamil.com</string>
    <string name="a">A</string>
    <string name="name_hung">Anh Hưng</string>
    <string name="add_new_contact">Tạo người liên hệ mới</string>
    <string name="love">Yêu thích</string>
    <string name="phone_book">Danh Bạ</string>
    <string name="string_policy">
        By continuing, you agree to our <b><u>Terms</u></b> and <b><u>Privacy policy</u></b>.\n
      \u2022  Subscription gives you access to V9Compress\'s premium features and removes all ads.\n
    \u2022 Plans auto-renew and can be canceled anytime via Google Play Subscriptions.\n
    \u2022 You will not be charged if you cancel before the trial period ends.\n
    \u2022 Subscription is not required to use V9Compress.
    </string>
    <string name="string_policy_unlock">
        By continuing you agree to our <u>Terms</u> and <u>Privacy policies</u>\n
        Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
        Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
        You will not be charged if subscription is canceled before trial period ends.\n
        Subscription is not required to use V9Compress
    </string>
    <string name="policy_yearly">By continuing you agree to our <b><u>Terms</u></b> and <b><u>Privacy policies</u></b>.\n
        \u2022 Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
        \u2022 Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
        \u2022 You will not be charged if subscription is canceled before trial period ends.\n
        \u2022 Subscription is not required to use V9Compress
    </string>
    <string name="optimize_storage">Optimize Storage, Get Space</string>
    <string name="_899_week"><strike>\$8.99</strike></string>
    <string name="off_50">OFF 50%</string>
    <string name="price_week">\$3.99/</string>
    <string name="week_price">week</string>
    <string name="claim_offer">CLAIM OFFER</string>
    <string name="description_claim">\$3.99 for first week then \$8.99 next week.\n Billed weekly, cancel anytime.</string>
    <string name="week"><strike>/week</strike></string>
    <string name="subtitle">Faster compress made simple</string>
    <string name="_30">30%</string>
    <string name="trial3day">Try %1$s for FREE, then %2$s per week.\n Auto renew, cancel anytime</string>
    <string name="btn_claim_offer">CLAIM OFFER</string>
    <string name="not_found">We couldn’t load the infomation</string>
    <string name="try_again"><u>Try again</u></string>

    <string name="policyOfYear">
        By continuing you agree to our <u>Terms</u> and <u>Privacy policies</u> \n
        Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
        Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
        You will not be charged if subscription is canceled before trial period ends.\n
        Subscription is not required to use V9Compress

    </string>
    <string name="title_unlock">\$14.99/year after free trial ends.\n Auto renew, cancel anytime</string>
    <string name="title_unlock_pay">\$14.99/year\n Auto renew, cancel anytime</string>
    <string name="btn_try_for_free">Try for free</string>
    <string name="txt_continue">Continue</string>
    <string name="shrink_size">SHRINK SIZE\nKEEP QUALITY</string>
    <string name="keep_quality">KEEP QUALITY</string>
    <string name="price_title">\$14.99/year after free trial ends.\n Auto renew, Cancel anytime</string>
    <string name="free_trial_enabled">Free trial enabled</string>
    <string name="smarter_storage_made">SMARTER STORAGE MADE\nAFFORDABLE</string>
    <string name="policy_focus_year">By continuing you agree to our Terms and Privacy policies\n
        Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
        Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
        You will not be charged if subscription is canceled before trial period ends.\n
        Subscription is not required to use V9Compress</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="titlePriceWeekly">\$4.99/week after free trial ends.\n Auto renew, Cancel anytime</string>
    <string name="txtResultYearly">\$14.99/year\nAuto renew, Cancel anytime</string>
    <string name="txtResultWeekly">\$4.99/week\nAuto renew, Cancel anytime</string>
    <string name="saved_92">Saved 92%</string>
    <string name="yearly_plan">Yearly plan</string>
    <string name="_19_99_year"><b>\$19.99</b>/year</string>
    <string name="per_week">Only \$0.412 per week</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="_4_99_week"><b>\$4.99</b>/week</string>
    <string name="renew_wall_year">\$19.99/year after free trial ends.\n Auto renew, cancel anytime</string>
    <string name="renew_wall_week">\$4.99/week after free trial ends.\n Auto renew, cancel anytime</string>
    <string name="free_trial_3_day">3-day free trial enabled</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="high_quality_compression">high-quality compression</string>
    <string name="renew_year_continue">Auto renew at \$19.99/year</string>
    <string name="renew_week_continue">Auto renew at \$4.99/week</string>
</resources>
