<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".DemoSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <TextView
            style="@style/TextCustomBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:fadingEdge="horizontal"
            android:fontFamily="@font/inter_medium"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/setting_and_ìnor"
            android:textSize="@dimen/_24sp" />

        <TextView
            style="@style/TextCustomBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:fontFamily="@font/inter_medium"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/information_person" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp"
            android:background="@android:color/white"
            android:padding="@dimen/_16dp">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img_avatar"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_toEndOf="@id/img_avatar"
                android:text="@string/name_user"
                android:fontFamily="@font/inter_medium"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_username"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_toEndOf="@id/img_avatar"
                android:text="@string/mail"
                android:fontFamily="@font/inter_medium"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textSize="@dimen/_14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_rounder"
                style="@style/TextCustomBold"
                android:text="@string/fix" />

        </RelativeLayout>

        <TextView
            style="@style/TextCustomBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/common_setting" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp"
            android:background="@android:color/white"
            android:padding="@dimen/_16dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/language"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vietnamese" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/topic"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_size" />
            </TableRow>

        </TableLayout>

        <TextView
            style="@style/TextCustomBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/function" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="@dimen/_8dp"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/security"
                android:background="@drawable/btn_rounder"
                style="@style/TextCustomBold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/help"
                android:background="@drawable/btn_rounder"
                style="@style/TextCustomBold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/evaluate"
                android:background="@drawable/btn_rounder"
                style="@style/TextCustomBold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/version"
                android:background="@drawable/btn_rounder"
                style="@style/TextCustomBold"/>

        </GridLayout>

    </LinearLayout>
</ScrollView>